# gh-pick-merge-action-test

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: github-action.yml
src/: github_event.rs  helpers.rs  main.rs
